components/ua/establishment-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: establishment-service
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    spec:
      containers:
        - name: establishment-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          startupProbe:
            successThreshold: 1
            failureThreshold: 18
            periodSeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: /q/health/started
              port: 8080
          livenessProbe:
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              path: /q/health/live
              port: 8080
          readinessProbe:
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
            successThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
          volumeMounts:
            - name: config
              mountPath: "/deployments/config"
              readOnly: true
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-creds
      volumes:
        - name: config
          configMap:
            name: establishment-service-config
