components/ua/establishment-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: establishment-service
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8080
      targetPort: 8080
