components/ua/establishment-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: establishment-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.developers.facilities.rl.ac.uk"
      secretName: developers-tls-certificate
    - hosts:
        - "*.facilities.rl.ac.uk"
      secretName: facilities-tls-certificate
  rules:
    - host: "*.developers.facilities.rl.ac.uk"
      http: &http_rules
        paths:
          - path: /establishment-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: establishment-service
                port:
                  number: 8080 
    - host: "*.facilities.rl.ac.uk"
      http: *http_rules
