components/ua/establishment-service/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: establishment-service
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.developers.facilities.rl.ac.uk"
      secretName: developers-tls-certificate
    - hosts:
        - "*.facilities.rl.ac.uk"
      secretName: facilities-tls-certificate
  rules:
    - host: "*.developers.facilities.rl.ac.uk"
      http: &http_rules
        paths:
          - path: /establishment
            pathType: Prefix
            backend:
              service:
                name: establishment-service
                port:
                  number: 30000
    - host: "*.facilities.rl.ac.uk"
      http: *http_rules
